packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_model__should_support_input_radio.snap
---
source: tests/vapor/v_model.rs
expression: code
---
import { applyRadioModel as _applyRadioModel, template as _template } from "vue";
const t0 = _template("<input type=\"radio\">", true);
(() => {
  const n0 = t0();
  _applyRadioModel(n0, () => model, (_value) => model = _value);
  return n0;
})();
