packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_model__should_support_select.snap
---
source: tests/vapor/v_model.rs
expression: code
---
import { applySelectModel as _applySelectModel, template as _template } from "vue";
const t0 = _template("<select></select>", true);
(() => {
  const n0 = t0();
  _applySelectModel(n0, () => model, (_value) => model = _value);
  return n0;
})();
